Archive2/d2/3c0f805218dfd4/output
main.cpp:21:6: error: unused variable 'unit' [-Werror,-Wunused-variable]
auto unit = [] (auto x) {
     ^
main.cpp:27:6: error: unused variable 'bind' [-Werror,-Wunused-variable]
auto bind = [] (auto p, auto f) {
     ^
main.cpp:34:6: error: unused variable 'item' [-Werror,-Wunused-variable]
auto item = [] (auto range) {
     ^
3 errors generated.
